chore(Dashboard.vue): clear unnecessary code fix(useListHistory.js): change return data of fetchListHistory to include response equivalent with map data refactor(pages/index.vue); conditional if to encompass dashboard component style(main.css): change root text color to white

--- a/frontend-app/src/assets/css/main.css
+++ b/frontend-app/src/assets/css/main.css
@@ -4,7 +4,8 @@
 
 :root {
   font-family: 'Roboto Mono', 'Raleway', 'Lato', Avenir, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
-  color: #e2e8f0;
+  /* color: #e2e8f0; */
+  color: white;
   @apply bg-gradient-to-r from-green-600 to-emerald-600
 }
 
